# demo-package-with-setup.cfg

./: .gitignore  README.md  commands.txt  setup.cfg
src/huge/: main.py
tests/: test_main.py
