[metadata]
name = huge
version = 1.0.0
description = Demo Python distribution package using legacy setup.cfg
long_description = file: README.md
author = deepklim

[options]
package_dir =
    # Mapping empty string (i.e. current folder in sys.path) to src/
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    huge-cli = huge.main:important
